--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         "morgan": "^1.10.0",
         "nodemailer": "^6.7.5",
         "rimraf": "^3.0.2",
-        "slugify": "^1.6.5"
+        "slugify": "^1.6.5",
+        "socket.io": "^4.5.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.17.10",
