--- a/package.json
+++ b/package.json
@@ -1,47 +1,56 @@
 {
-  "name": "hackathon-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "build": "babel src -d dist --copy-files",
-    "serve": "node dist/server.js",
-    "clean": "rimraf dist",
-    "start": "npm run serve",
-    "restart": "npm run clean && npm run build && npm run start",
-    "dev": "nodemon -e js,ejs --exec npm run restart"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alsoamit/metrack-api.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/alsoamit/metrack-api/issues"
-  },
-  "homepage": "https://github.com/alsoamit/metrack-api#readme",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "express-validator": "^6.14.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.0",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.7.5",
-    "rimraf": "^3.0.2",
-    "slugify": "^1.6.5",
-    "socket.io": "^4.5.1"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.18.5",
-    "@babel/preset-env": "^7.18.2",
-    "nodemon": "^2.0.16"
-  }
+    "name": "hackathon-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "build": "babel src -d dist --copy-files",
+        "serve": "node dist/server.js",
+        "clean": "rimraf dist",
+        "start": "npm run serve",
+        "restart": "npm run clean && npm run build && npm run start",
+        "dev": "nodemon -e js,ejs --exec npm run restart",
+        "format:check": "prettier --check .",
+        "format:write": "prettier --write .",
+        "lint:check": "eslint .",
+        "lint:fix": "eslint --fix ."
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/alsoamit/metrack-api.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/alsoamit/metrack-api/issues"
+    },
+    "homepage": "https://github.com/alsoamit/metrack-api#readme",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.1",
+        "ejs": "^3.1.8",
+        "express": "^4.18.1",
+        "express-validator": "^6.14.2",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.4.0",
+        "morgan": "^1.10.0",
+        "nodemailer": "^6.7.5",
+        "rimraf": "^3.0.2",
+        "slugify": "^1.6.5",
+        "socket.io": "^4.5.1"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.17.10",
+        "@babel/core": "^7.18.5",
+        "@babel/preset-env": "^7.18.2",
+        "eslint": "^8.18.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "nodemon": "^2.0.16",
+        "prettier": "^2.7.1"
+    }
 }
