--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "build": "babel src -d dist --copy-files",
+        "build": "npm run lint:check && babel src -d dist --copy-files",
         "serve": "node dist/server.js",
         "clean": "rimraf dist",
         "start": "npm run serve",
