ci: update scripts

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "build": "npm run lint:check && babel src -d dist --copy-files",
-        "serve": "node dist/server.js",
+        "build": "npm run lint:check && npm run build:babel",
+        "build:babel": "babel src -d dist --copy-files",
+        "start": "node dist/server.js",
         "clean": "rimraf dist",
-        "start": "npm run serve",
-        "restart": "npm run clean && npm run build && npm run start",
+        "restart": "npm run clean && npm run build:babel && npm run start",
         "dev": "nodemon -e js,ejs --exec npm run restart",
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
